--- a/midai/index.html
+++ b/midai/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!--屏蔽电话号码-->
     <meta name="format-detection" content="telephone=no">
-    <title>3721贷</title>
+    <title>3721贷款</title>
     <link href="https://cdn.bootcss.com/layer/3.1.0/mobile/need/layer.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/Swiper/4.2.0/css/swiper.css" rel="stylesheet">
     <link href="css/reset.css" rel="stylesheet">
